[tool.poetry]
name = "pyromodpatched"
version = "0.0.2"
description = "A monkeypatcher add-on for Pyrogram that does conversation handling"
authors = ["usernein"]
license = "LGPLv3+"
readme = "README.md"

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = "^3.8"
pyrogrampatched = ">=0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
